# gimodules-python

./: .gitignore  CMakeLists.txt  LICENSE  README.md  lint.sh  requirements.txt  requirements312.txt  requirements37.txt  setup.py
.github/workflows/: compatibility_check.yml  publish.yml  pytest.yml  python-lint.yml
docker/airflow/: README.md  docker-compose.yaml
docker/jupyterlab/: Dockerfile  build.sh  docker-compose.yml  librdkafka++.so.1  requirements.txt
docs/: Usage.ipynb  automation.rst  conf.py  eGateHighSpeedPort.h  index.rst  installation.rst  modules.rst  overview.rst
docs/source/: gimodules.cloudconnect.rst  gimodules.domain.rst  gimodules.rst  gimodules.visualization.rst  modules.rst
gimodules/: __init__.py  modules_tester.ipynb
gimodules/CloudConnect/: CloudRequest.py  GIController.py  utils.py
gimodules/Domain/: Domain.py  csv.py
gimodules/Visualization/: definedplots.py
gimodules/cloudconnect/: authenticate.py  cloud_request.py  gi_websocket.py  input_handler.py  mysql_connect.py  utils.py
gimodules/domain/: csv.py  data_manipulator.py  domain.py
gimodules/py_q_station_connect_cloud/: gins_data_create_buffer.py  gins_data_get_buffer.py  py_q_station_connect_cloud.py
gimodules/tutorial_examples/: how_to_interact_with_Q_station.py
gimodules/tutorial_examples/code_examples_from_benoit/: example_ConnectController.py  example_CreateBuffer.py  example_GetBuffer.py  example_ReadDatFiles.py  example_WriteOnlineValue.py
gimodules/visualization/: definedplots.py
tests/: test_capital.py  test_websocket.py
(+1 files in other folders)
